--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>mindar-a_mural</title>
+      <title>mindar-chill_mural</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="apple-mobile-web-app-capable" content="yes">
@@ -14,7 +14,7 @@
     </head>
     <body>
       <a-scene 
-        mindar-image="imageTargetSrc: a_mural_scale6.mind; filterMinCF:0.0001; filterBeta: 1" 
+        mindar-image="imageTargetSrc: mindar-chill_mural_scale1.mind; filterMinCF:0.0001; filterBeta: 1" 
         color-space="sRGB" 
         renderer="colorManagement: true, physicallyCorrectLights" 
         vr-mode-ui="enabled: false" 
