--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1TKS1EZB8C"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-1TKS1EZB8C');
+        </script>
+        
       <title>mindar-chill_mural</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1" />
